--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<tr>
 				<td colspan=2 id=d1>
 					<!-- This heading goes across top of page -->
-					<h1 align=center> <font size=99 color=Purple face=verdana> <b>This is my friends and family page</b></font></h1>
+					<h1 align=center> <font size=99 color=Purple face=verdana> <b>Home Page</b></font></h1>
 				</td>
 			</tr>
 			
@@ -58,6 +58,8 @@
 					<span style="font-weight: bold; color: white;"> Homepage </span><br/><br/><br/>
 					<a href= "sports.html"> Sports </a> <br/><br/><br/>
 					<a href= "myfavoriteanimals.html"> Pets & Animals </a> <br/><br/><br/>
+					<a href= "videogames.html"> Video Games </a> <br/><br/><br/>
+					<a href= "familyandfriends.html"> Family & Friends </a> <br/><br/><br/>
 				</p>
 				</td>
 				<td id=d3>
@@ -75,7 +77,7 @@
 				<td colspan=2 id=d4>
 		<p align=center><font face= verdana color= blue size=3> 
 			<!-- For messages, footnotes, or other info at bottom of page-->
-			I hope you like my website		
+			I hope you enjoyed		
 		</font>
 		</p>
 				</td>
